--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ether-CRM",
+  "name": "ether-crm",
   "version": "0.2.0",
   "description": "EtherCRM CRM for wealth managers and financial advisers",
   "main": "index.html",
